# monitor-the-situation-stellar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
monitor/: client.py  historical.py  risk.py  server.py
stellar-gateway/: .env.example  package-lock.json  package.json
stellar-gateway/scripts/: demo-e2e.ts  setup-testnet.ts
stellar-gateway/src/: governance.ts  index.ts  proxy.ts  routes.ts
